--- a/scripts/qdrant/01_init_vdb.ipynb
+++ b/scripts/qdrant/01_init_vdb.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "75a59673",
    "metadata": {},
    "outputs": [],
@@ -48,6 +48,7 @@
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
     "from qdrant_client import QdrantClient\n",
+    "from qdrant_client.models import HnswConfigDiff\n",
     "from qdrant_client.models import (\n",
     "    VectorParams, Distance, PointStruct, \n",
     "    Filter, FieldCondition, MatchValue\n",
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "dfff3e7b",
    "metadata": {},
    "outputs": [
@@ -161,7 +162,8 @@
     }
    ],
    "source": [
-    "# Загрузка модели эмбеддингов\n",
+    "# Модель загружается с Hugging Face Hub (https://huggingface.co/intfloat/multilingual-e5-base)\n",
+    "# В соответствии с требованием п.2 раздела \"Сбор требований\" (07_Database.md)\n",
     "MODEL_NAME = \"intfloat/multilingual-e5-base\"  # 768 измерений, хорошая поддержка русского языка\n",
     "VECTOR_SIZE = 768\n",
     "\n",
@@ -185,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "26dd6919",
    "metadata": {},
    "outputs": [
@@ -217,7 +219,12 @@
     "        collection_name=COLLECTION_NAME,\n",
     "        vectors_config=VectorParams(\n",
     "            size=VECTOR_SIZE,\n",
-    "            distance=Distance.COSINE\n",
+    "            distance=Distance.COSINE,\n",
+    "            on_disk=False  # хранение в RAM для скорости\n",
+    "        ),\n",
+    "        hnsw_config=HnswConfigDiff(\n",
+    "            m=16,\n",
+    "            ef_construct=200\n",
     "        )\n",
     "    )\n",
     "    print(f\"✅ Коллекция '{COLLECTION_NAME}' создана (размерность: {VECTOR_SIZE}, метрика: Cosine)\")"
@@ -247,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "abd0ab3a",
    "metadata": {},
    "outputs": [
@@ -310,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "410007ac",
    "metadata": {},
    "outputs": [
@@ -325,7 +332,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Batches: 100%|██████████| 8/8 [00:16<00:00,  2.08s/it]"
+      "Batches: 100%|██████████| 8/8 [00:25<00:00,  3.20s/it]"
      ]
     },
     {
@@ -355,10 +362,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "68736fe8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  📦 Загружено 100/241 точек...\n",
+      "  📦 Загружено 200/241 точек...\n",
+      "  📦 Загружено 241/241 точек...\n",
+      "\n",
+      "✅ Все 241 красных флажков загружены в коллекцию 'ru_documents_embeddings'\n"
+     ]
+    }
+   ],
    "source": [
     "# Формирование точек для загрузки в Qdrant\n",
     "BATCH_SIZE = 100\n",
@@ -391,6 +410,202 @@
     "    print(f\"  📦 Загружено {total_uploaded}/{len(points)} точек...\")\n",
     "\n",
     "print(f\"\\n✅ Все {total_uploaded} красных флажков загружены в коллекцию '{COLLECTION_NAME}'\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcbf5b5a",
+   "metadata": {},
+   "source": [
+    "## 7. Проверка загрузки\n",
+    "Тестовый поиск по коллекции для верификации корректности загрузки."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "c61944e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📊 Статистика коллекции 'ru_documents_embeddings':\n",
+      "   Всего точек: 241\n",
+      "   Размерность вектора: 768\n",
+      "   Метрика: Cosine\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Проверка количества записей в коллекции\n",
+    "collection_info = client.get_collection(COLLECTION_NAME)\n",
+    "print(f\"📊 Статистика коллекции '{COLLECTION_NAME}':\")\n",
+    "print(f\"   Всего точек: {collection_info.points_count}\")\n",
+    "print(f\"   Размерность вектора: {collection_info.config.params.vectors.size}\")\n",
+    "print(f\"   Метрика: {collection_info.config.params.vectors.distance}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "aa6634c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔍 Тестовый запрос: 'query: Сервис может удалить аккаунт пользователя без предупреждения'\n",
+      "\n",
+      "Топ-5 результатов:\n",
+      "  1. [critical] (Пользовательское соглашение)\n",
+      "     Сервис вправе заблокировать или удалить аккаунт пользователя без объяснения причин\n",
+      "     Score: 0.9460\n",
+      "\n",
+      "  2. [critical] (Пользовательское соглашение)\n",
+      "     Сервис может заблокировать аккаунт при подозрении на нарушение без предоставления доказательств\n",
+      "     Score: 0.9253\n",
+      "\n",
+      "  3. [critical] (Пользовательское соглашение)\n",
+      "     При удалении аккаунта все данные пользователя удаляются безвозвратно, включая оплаченный контент\n",
+      "     Score: 0.9133\n",
+      "\n",
+      "  4. [critical] (Политика конфиденциальности)\n",
+      "     Данные хранятся бессрочно даже после удаления аккаунта пользователя\n",
+      "     Score: 0.9025\n",
+      "\n",
+      "  5. [critical] (Пользовательское соглашение)\n",
+      "     Сервис освобождается от ответственности за потерю данных пользователя при любых обстоятельствах\n",
+      "     Score: 0.9002\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Тестовый поиск: проверяем релевантность\n",
+    "test_query = \"query: Сервис может удалить аккаунт пользователя без предупреждения\"\n",
+    "test_embedding = model.encode([test_query])[0].tolist()\n",
+    "\n",
+    "results = client.query_points(\n",
+    "    collection_name=COLLECTION_NAME,\n",
+    "    query=test_embedding,\n",
+    "    limit=5\n",
+    ")\n",
+    "\n",
+    "print(f\"🔍 Тестовый запрос: '{test_query}'\\n\")\n",
+    "print(f\"Топ-5 результатов:\")\n",
+    "for i, point in enumerate(results.points):\n",
+    "    print(f\"  {i+1}. [{point.payload['severity']}] ({point.payload['document_type_ru']})\")\n",
+    "    print(f\"     {point.payload['flag_text']}\")\n",
+    "    print(f\"     Score: {point.score:.4f}\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "ff7962df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔍 Тестовый запрос с фильтром (subscription_offer): 'query: Невозможно вернуть деньги за курс'\n",
+      "\n",
+      "  1. [critical] оплата_возврат\n",
+      "     Возврат денежных средств за курс или подписку невозможен ни при каких обстоятельствах\n",
+      "     Score: 0.9541\n",
+      "\n",
+      "  2. [medium] оплата_возврат\n",
+      "     Возврат невозможен для акционных и скидочных предложений\n",
+      "     Score: 0.9156\n",
+      "\n",
+      "  3. [high] оплата_возврат\n",
+      "     Отсутствует чёткая процедура оформления возврата денежных средств\n",
+      "     Score: 0.9131\n",
+      "\n",
+      "  4. [critical] маркетинг\n",
+      "     Гарантия возврата денег оговорена такими условиями, что воспользоваться ей практически невозможно\n",
+      "     Score: 0.9100\n",
+      "\n",
+      "  5. [critical] обязанности_ученика\n",
+      "     При нарушении правил школы ученик теряет доступ к курсу без возврата оплаты\n",
+      "     Score: 0.9075\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Тестовый поиск с фильтрацией по типу документа\n",
+    "test_query_2 = \"query: Невозможно вернуть деньги за курс\"\n",
+    "test_embedding_2 = model.encode([test_query_2])[0].tolist()\n",
+    "\n",
+    "results_filtered = client.query_points(\n",
+    "    collection_name=COLLECTION_NAME,\n",
+    "    query=test_embedding_2,\n",
+    "    query_filter=Filter(\n",
+    "        must=[\n",
+    "            FieldCondition(\n",
+    "                key=\"document_type\",\n",
+    "                match=MatchValue(value=\"subscription_offer\")\n",
+    "            )\n",
+    "        ]\n",
+    "    ),\n",
+    "    limit=5\n",
+    ")\n",
+    "\n",
+    "print(f\"🔍 Тестовый запрос с фильтром (subscription_offer): '{test_query_2}'\\n\")\n",
+    "for i, point in enumerate(results_filtered.points):\n",
+    "    print(f\"  {i+1}. [{point.payload['severity']}] {point.payload['category']}\")\n",
+    "    print(f\"     {point.payload['flag_text']}\")\n",
+    "    print(f\"     Score: {point.score:.4f}\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "844d04f2",
+   "metadata": {},
+   "source": [
+    "## 8. Создание индексов для фильтрации (опционально)\n",
+    "Создание payload-индексов ускоряет фильтрацию при поиске."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "d9bbf9a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Индекс создан для поля 'document_type'\n",
+      "✅ Индекс создан для поля 'severity'\n",
+      "✅ Индекс создан для поля 'category'\n",
+      "✅ Индекс создан для поля 'lang'\n",
+      "\n",
+      "🎉 Инициализация векторной базы данных завершена!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Создание индексов для полей, по которым будет происходить фильтрация\n",
+    "from qdrant_client.models import PayloadSchemaType\n",
+    "\n",
+    "for field in [\"document_type\", \"severity\", \"category\", \"lang\"]:\n",
+    "    client.create_payload_index(\n",
+    "        collection_name=COLLECTION_NAME,\n",
+    "        field_name=field,\n",
+    "        field_schema=PayloadSchemaType.KEYWORD\n",
+    "    )\n",
+    "    print(f\"✅ Индекс создан для поля '{field}'\")\n",
+    "\n",
+    "print(\"\\n🎉 Инициализация векторной базы данных завершена!\")"
    ]
   }
  ],
